python/tests/gold/redirecttestswithproxyproto/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {},
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "k8s-redirecttestswithproxyproto-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest",
                "service": "redirecttestswithproxyproto-admin"
            },
            "name": "redirecttestswithproxyproto-admin",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-admin-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\n  service: redirecttestswithproxyproto-admin\nname: redirecttestswithproxyproto-admin\nnamespace: default\n"
        },
        "k8s-redirecttestswithproxyproto-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: redirecttestswithproxyproto\nnamespace: default\n"
        },
        "k8s-redirecttestswithproxyproto-http-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto-http",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-http-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: redirecttestswithproxyproto-http\nnamespace: default\n"
        },
        "redirecttestswithproxyproto-http.default.1": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "location": "redirecttestswithproxyproto-http.default.1",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "rkey": "redirecttestswithproxyproto-http.default.1",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: ambassador/v1\nkind: Mapping\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: tls_target_mapping\nprefix: /tls-target/\nservice: redirecttestswithproxyproto-http\n",
            "service": "redirecttestswithproxyproto-http"
        },
        "redirecttestswithproxyproto.default.1": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "config": {
                "enable_ipv6": true,
                "use_proxy_proto": true
            },
            "kind": "Module",
            "location": "redirecttestswithproxyproto.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "redirecttestswithproxyproto.default.1",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: ambassador/v1\nconfig:\n  enable_ipv6: true\n  use_proxy_proto: true\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: ambassador\n"
        }
    },
    "mappings": {
        "tls_target_mapping": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "service": "redirecttestswithproxyproto-http"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v1",
            "enable_ipv6": true,
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "use_proxy_proto": true
        }
    },
    "service": {
        "k8s-redirecttestswithproxyproto-admin-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest",
                "service": "redirecttestswithproxyproto-admin"
            },
            "name": "redirecttestswithproxyproto-admin",
            "namespace": "default"
        },
        "k8s-redirecttestswithproxyproto-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto",
            "namespace": "default"
        },
        "k8s-redirecttestswithproxyproto-http-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto-http",
            "namespace": "default"
        }
    }
}
